@@ -24,7 +24,15 @@ typedef struct cleri_olist_s cleri_olist_t;
 typedef struct cleri_choice_s cleri_choice_t;
 
 /* public functions */
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 cleri_t * cleri_choice(uint32_t gid, int most_greedy, size_t len, ...);
+
+#ifdef __cplusplus
+}
+#endif
 
 /* structs */
 struct cleri_choice_s
