@@ -21,8 +21,15 @@ typedef struct cleri_s cleri_t;
 typedef struct cleri_keyword_s cleri_keyword_t;
 
 /* public functions */
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 cleri_t * cleri_keyword(uint32_t gid, const char * keyword, int ign_case);
 
+#ifdef __cplusplus
+}
+#endif
 /* structs */
 struct cleri_keyword_s
 {
