@@ -22,7 +22,15 @@ typedef struct cleri_s cleri_t;
 typedef struct cleri_regex_s cleri_regex_t;
 
 /* public functions */
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 cleri_t * cleri_regex(uint32_t gid, const char * pattern);
+
+#ifdef __cplusplus
+}
+#endif
 
 /* structs */
 struct cleri_regex_s
