@@ -23,7 +23,15 @@ typedef struct cleri_olist_s cleri_olist_t;
 typedef struct cleri_sequence_s cleri_sequence_t;
 
 /* public functions */
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 cleri_t * cleri_sequence(uint32_t gid, size_t len, ...);
+
+#ifdef __cplusplus
+}
+#endif
 
 /* structs */
 struct cleri_sequence_s
