@@ -24,7 +24,15 @@ typedef struct cleri_s cleri_t;
 typedef struct cleri_token_s cleri_token_t;
 
 /* public functions */
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 cleri_t * cleri_token(uint32_t gid, const char * token);
+
+#ifdef __cplusplus
+}
+#endif
 
 /* structs */
 struct cleri_token_s
