@@ -23,7 +23,15 @@ typedef struct cleri_tlist_s cleri_tlist_t;
 typedef struct cleri_tokens_s cleri_tokens_t;
 
 /* public functions */
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 cleri_t * cleri_tokens(uint32_t gid, const char * tokens);
+
+#ifdef __cplusplus
+}
+#endif
 
 /* structs */
 struct cleri_tlist_s
