@@ -1,3 +1,9 @@
+libcleri (0.9.2)
+
+  * Added __cplusplus macros for c++ compatibility.
+
+ -- Jeroen van der Heijden <jeroen@transceptor.technology>  25 Aug 2017
+
 libcleri (0.9.1)
 
   * Rename object.h to cleri.h and the cleri_object_t to cleri_t.
